# rust-analyzer

./: Cargo.toml
crates/ide-assists/src/handlers/: extract_module.rs
crates/ide-completion/src/: context.rs  lib.rs
crates/ide-completion/src/context/: analysis.rs
crates/ide-completion/src/tests/: expression.rs  special.rs
crates/ide-diagnostics/src/: lib.rs
crates/ide-diagnostics/src/handlers/: replace_filter_map_next_with_find_map.rs  type_mismatch.rs  unused_variables.rs
crates/ide-fmt/: Cargo.toml
crates/ide-fmt/src/: lib.rs
crates/project-model/src/: cargo_workspace.rs  tests.rs  workspace.rs
crates/rust-analyzer/src/: cli.rs
crates/rust-analyzer/src/cli/: flags.rs  supervise.rs
crates/rust-analyzer/src/handlers/: request.rs
crates/rust-analyzer/src/lsp/: capabilities.rs
crates/rust-analyzer/tests/slow-tests/: main.rs
