[package]
name = "ide-fmt"
version = "0.0.0"
repository.workspace = true
description = "Native formatter prototype for rust-analyzer."

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
syntax.workspace = true

[dev-dependencies]
expect-test.workspace = true

[lints]
workspace = true
